--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,9 +2,11 @@
     /* background-color: #b8C655; */
     /* background-color: #ABDCD6; */
     background-color: #F3E47D;
-    color: #f18750;
-    text-shadow: 2px 2px #00000050;
+    color: #000000;
+    text-shadow: 1px 1px #00000050;
     text-align: center;
+    padding: 10px;
+    min-height: 1000px;
 }
 
 .mainText {
