--- a/src/pages/Marketplace.css
+++ b/src/pages/Marketplace.css
@@ -2,11 +2,9 @@
     /* background-color: #b8C655; */
     /* background-color: #ABDCD6; */
     background-color: #000000;
-    color: #ffffff;
+    color: #000000;
     text-shadow: 1px 1px #00000050;
     text-align: center;
-    padding: 10px;
-    min-height: 1000px;
 }
 
 .mainText {
