--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,11 +1,25 @@
 .Navbar {
+    display: flex;
+    justify-content: space-between;
     font-size: 1.5vw;
     margin-left: 30px;
-}
-
-.Links {
+  }
+  
+  .Links {
     padding: 20px; 
-}
+  }
+  
+  .Navbar nav {
+    display: flex;
+    justify-content: flex-start;
+  }
+  
+  .Navbar button {
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    padding: 10px;
+  }
 
 /* mobile styles */
 @media only screen and (max-width: 800px) {
@@ -18,4 +32,12 @@
     .Links {
         padding: 8px; 
     }
+
+    .Navbar button {
+        position: absolute;
+        top: 100px;
+        right: 20px;
+        padding: 10px;
+      }
+    
 }
