--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,6 +4,10 @@
     font-size: 1.5vw;
     margin-left: 30px;
   }
+
+  button.MenuIcon {
+    font-size: 40px;
+  }
   
   .Links {
     padding: 20px; 
@@ -15,29 +19,96 @@
   }
   
   .Navbar button {
-    position: absolute;
-    top: 30px;
-    right: 40px;
-    padding: 10px;
+    display: none;
   }
-
-/* mobile styles */
-@media only screen and (max-width: 800px) {
-
+  
+  /* mobile styles */
+  @media only screen and (max-width: 800px) {
     .Navbar {
-        font-size: 3.5vw;
-        margin-left: 19px;
+      font-size: 3.5vw;
+      margin-left: 19px;
     }
-
+  
     .Links {
-        padding: 8px; 
+      display: none;
     }
-
+  
     .Navbar button {
-        position: absolute;
-        top: 100px;
-        right: 20px;
-        padding: 10px;
-      }
-    
-}
+      display: block;
+      position: absolute;
+      top: 30px;
+      right: 20px;
+      padding: 10px;
+      background-color: transparent;
+      border: none;
+      outline: none;
+    }
+  
+    .Navbar button:focus {
+      outline: none;
+    }
+  
+    .Navbar button span {
+      display: block;
+      width: 24px;
+      height: 3px;
+      margin-bottom: 5px;
+      position: relative;
+      background: white;
+      border-radius: 3px;
+      z-index: 1;
+      transform-origin: 4px 0px;
+      transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+        opacity 0.55s ease;
+    }
+  
+    .Navbar button span:first-child {
+      transform-origin: 0% 0%;
+    }
+  
+    .Navbar button span:nth-last-child(2) {
+      transform-origin: 0% 100%;
+    }
+  
+    .Navbar button.active span:first-child {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+  
+    .Navbar button.active span:nth-last-child(2) {
+      transform: rotate(-45deg) translate(4px, -4px);
+    }
+  
+    .Navbar button.active span:nth-child(3) {
+      opacity: 0;
+      transform: rotate(0deg) scale(0.2, 0.2);
+    }
+  
+    .Navbar ul {
+      position: absolute;
+      top: 60px;
+      right: 0;
+      width: 100%;
+      background-color: #333;
+      display: none;
+      z-index: 2;
+      transition: all 0.5s ease;
+    }
+  
+    .Navbar ul li {
+      display: block;
+      text-align: center;
+      padding: 15px;
+      border-bottom: 1px solid #222;
+      margin-left: -40px;
+    }
+  
+    .Navbar ul li:hover {
+      background-color: #444;
+    }
+  
+    .Navbar button.active ~ ul {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  
