--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,10 +8,16 @@
   .Navbar__desktop {
     display: block;
   }
+
+  .Navbar__toggle {
+    background-color: #000;
+    border: none;
+  }
   
   .Navbar__toggle i {
     font-size: 24px;
-    padding: 10px;
+    padding: 8px;
+    color: #fff;
   }
 
   .Links {
