--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -58,7 +58,7 @@
         flex-direction: column;
         gap: 20px;
         margin: auto;
-        background-color: gray;
+        background-color: rgb(0, 0, 0);
         padding: 40px;
         position: absolute;
         top: 90px;
