--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -26,6 +26,7 @@
 
   .logout {
     position: relative;
+    margin-right: 100px;
     padding-bottom: 60px;
   }
   
@@ -53,20 +54,22 @@
         display: none;
       }
 
-    .Navbar__mobile-menu {
+      .Navbar__mobile-menu {
         display: flex;
         flex-direction: column;
         gap: 20px;
-        margin: auto;
+        margin: 0 auto; /* changed margin to "0 auto" to horizontally center */
         background-color: rgb(0, 0, 0);
         padding: 40px;
         position: absolute;
-        top: 90px;
-        right: 30px;
+        top: 110px;
+        left: 0; /* changed right to left to align with the left edge of the screen */
+        right: 0; /* set right to 0 to make the dropdown fill the entire width */
         border-radius: 20px;
-        font-size: large;
+        font-size: 8vw;
         border: 4px solid white;
-    }
+      }
+      
 
     .Links {
         padding: 8px; 
