--- a/src/pages/Chatbot.css
+++ b/src/pages/Chatbot.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
   }
   
-  input[type="text"] {
+  .chatInput[type="text"] {
     width: 100%;
     padding: 10px;
     font-size: 18px;
