--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,16 +4,21 @@
     font-size: 1.5vw;
     margin-left: 30px;
   }
-
+  .NavbarWrapper {
+    display: flex;
+    flex-direction: row;
+  }
   .Navbar__desktop {
-    display: block;
+    display: flex;
+    width: 1200px;
   }
 
   .Navbar__toggle {
     background-color: #000;
     border: none;
+    display: none;
   }
-  
+ 
   .Navbar__toggle i {
     font-size: 30px;
     padding: 2px;
@@ -23,25 +28,13 @@
   .Links {
     padding: 20px; 
   }
-
-  .logout {
-    position: relative;
-    margin-right: 100px;
-    padding-bottom: 60px;
-  }
   
   .Navbar nav {
     display: flex;
     justify-content: flex-start;
   }
   
-  .Navbar button {
-    position: absolute;
-    top: 30px;
-    right: 40px;
-    padding: 10px;
-    display: none;
-  }
+
 
 /* mobile styles */
 @media only screen and (max-width: 800px) {
@@ -53,7 +46,12 @@
     .Navbar__desktop {
         display: none;
       }
-
+      .Navbar__toggle {
+        background-color: #000;
+        border: none;
+        font-size: large;
+        display: block;
+      }
       .Navbar__mobile-menu {
         display: flex;
         flex-direction: column;
