--- a/src/pages/Chatbot.css
+++ b/src/pages/Chatbot.css
@@ -2,6 +2,7 @@
     color: #ccc;
     max-width: 400px;
     margin: 0 auto;
+    padding-top: 50px;
     padding: 20px;
     box-sizing: border-box;
   }
